--- a/assets/base.css
+++ b/assets/base.css
@@ -287,6 +287,7 @@ html.no-js .no-js-hidden {
 .isolate {
   position: relative;
   z-index: 0;
+  padding-top: 77px;
 }
 
 .section + .section {
@@ -315,7 +316,7 @@ body,
 .color-inverse,
 .color-accent-1,
 .color-accent-2 {
-  color: rgba(var(--color-foreground), 0.75);
+  color: rgba(var(--color-foreground));
   background-color: rgb(var(--color-background));
 }
 
@@ -393,7 +394,7 @@ body,
 
 .text-body {
   font-size: 1.5rem;
-  letter-spacing: 0.06rem;
+  letter-spacing: 0;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
   font-family: var(--font-body-family);
   font-style: var(--font-body-style);
@@ -414,7 +415,7 @@ h5,
   font-family: var(--font-heading-family);
   font-style: var(--font-heading-style);
   font-weight: var(--font-heading-weight);
-  letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
+  letter-spacing: 0;
   color: rgb(var(--color-foreground));
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
   word-break: break-word;
@@ -517,7 +518,7 @@ blockquote {
 
 .caption {
   font-size: 1rem;
-  letter-spacing: 0.07rem;
+  letter-spacing: 0.;
   line-height: calc(1 + 0.7 / var(--font-body-scale));
 }
 
@@ -995,8 +996,8 @@ summary::-webkit-details-marker {
 .subtitle {
   font-size: 1.8rem;
   line-height: calc(1 + 0.8 / var(--font-body-scale));
-  letter-spacing: 0.06rem;
-  color: rgba(var(--color-foreground), 0.7);
+  letter-spacing: 0;
+  color: rgba(var(--color-foreground));
 }
 
 .subtitle--small {
@@ -1416,9 +1417,8 @@ button.shopify-payment-button__button--unbranded {
 .button-label,
 .shopify-challenge__button,
 .customer button {
-  font-size: 1.5rem;
-  letter-spacing: 0.1rem;
-  line-height: calc(1 + 0.2 / var(--font-body-scale));
+  font: normal normal 600 18px/22px Montserrat;
+  letter-spacing: 0;
 }
 
 .button--tertiary {
@@ -1827,7 +1827,7 @@ details[open] > .share-button__fallback {
   transition: top var(--duration-short) ease,
     font-size var(--duration-short) ease;
   color: rgba(var(--color-foreground), 0.75);
-  letter-spacing: 0.1rem;
+  letter-spacing: 0;
   line-height: 1.5;
 }
 
@@ -2164,13 +2164,13 @@ input[type='checkbox'] {
   color: rgb(var(--color-button-text));
   height: 1.7rem;
   width: 1.7rem;
-  border-radius: 100%;
+  border-radius: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 0.9rem;
-  bottom: 0.8rem;
-  left: 2.2rem;
+  bottom: 2.1rem;
+  left: 2.4rem;
   line-height: calc(1 + 0.1 / var(--font-body-scale));
 }
 
@@ -2801,6 +2801,8 @@ details-disclosure > details {
   border-radius: var(--text-boxes-radius);
   border: var(--text-boxes-border-width) solid rgba(var(--color-foreground), var(--text-boxes-border-opacity));
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 .content-container:after {
