--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -1,9 +1,10 @@
-.product {
+    .product {
   margin: 0;
 }
 
 .product.grid {
   gap: 0;
+  padding-top: 43px;
 }
 
 .product--no-media {
@@ -20,10 +21,24 @@
   .product--thumbnail_slider .product__media-gallery,
   .product--stacked .product__info-container--sticky,
   .product--columns .product__info-container--sticky {
-    display: block;
-    position: sticky;
-    top: 3rem;
     z-index: 2;
+
+    /* UI Properties */
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 20px #00000029;
+    border: 1px solid #D5D5D5;
+    border-radius: 5px;
+    opacity: 1;
+    padding-left: 28px;
+    padding-right: 23px;
+    padding-top: 18px;
+    padding-bottom: 25px;
+    width: calc(100% - var(--grid-desktop-horizontal-spacing) / 2);
+  }
+
+  
+  .product {
+    flex-wrap: nowrap;
   }
 
   .product--thumbnail .thumbnail-list {
@@ -31,7 +46,7 @@
   }
 
   .product__info-wrapper {
-    padding: 0 0 0 5rem;
+    padding: 0 0 0 0;
   }
 
   .product__info-wrapper--extra-padding {
@@ -59,12 +74,16 @@
   .product--large:not(.product--no-media) .product__media-wrapper {
     max-width: 65%;
     width: calc(65% - var(--grid-desktop-horizontal-spacing) / 2);
+    padding-right: 50px;
+    padding-left: 50px;
   }
 
   .product--large:not(.product--no-media) .product__info-wrapper {
-    padding: 0 0 0 4rem;
-    max-width: 35%;
-    width: calc(35% - var(--grid-desktop-horizontal-spacing) / 2);
+    max-width: 50%;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .product--large:not(.product--no-media).product--right .product__info-wrapper {
@@ -270,7 +289,7 @@ fieldset.product-form__input .form__label {
 }
 
 .product-form__submit {
-  margin-bottom: 1rem;
+  height: 52px;
 }
 
 .no-js .product-form__submit.button--secondary {
@@ -304,7 +323,7 @@ fieldset.product-form__input .form__label {
 /* Product info */
 
 .product__info-container > * + * {
-  margin: 1.5rem 0;
+  margin: 0 0;
 }
 
 .product__info-container iframe {
@@ -313,11 +332,34 @@ fieldset.product-form__input .form__label {
 
 .product__info-container .product-form,
 .product__info-container .product__description {
-  margin: 2.5rem 0;
+  padding-top: 37px;
 }
 
 .product__text {
   margin-bottom: 0;
+}
+
+.product__text.shipping_info {
+  color: #25A525;
+  padding-top: 18px;
+}
+
+.product__text.shipping_info::before {
+    content: '';
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #25A525;
+    border-radius: 50%;
+    background: #25A525 0% 0% no-repeat padding-box;
+    border: 1px solid #25A525;
+    opacity: 1;
+    margin-bottom: -3px;
+    margin-right: 10px;
+}
+
+.product__text.product_caption {
+  padding-top: 12px;
 }
 
 a.product__text {
@@ -332,7 +374,6 @@ a.product__text {
 
 .product__title {
   word-break: break-word;
-  margin-bottom: 1.5rem;
 }
 
 .product__title > * {
@@ -360,7 +401,7 @@ a.product__text {
 }
 
 .product .price__container {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0;
 }
 
 .product .price dl {
@@ -384,7 +425,9 @@ a.product__text {
   }
 
   .product__info-container .price--on-sale .price-item--regular {
-    font-size: 1.6rem;
+    font: normal normal 600 18px/22px Montserrat;
+    padding-right: 15px;
+    color: rgb(var(--color-base-text));
   }
 
   .product__info-container > *:first-child {
@@ -410,7 +453,13 @@ a.product__text {
 }
 
 .product__tax {
-  margin-top: -1.4rem;
+  margin-left: 6px
+}
+
+.price_include_taxes {
+  display: flex;
+  padding-top: 20px;
+  align-items: baseline;
 }
 
 .product--no-media noscript .product-form__input,
@@ -514,6 +563,29 @@ a.product__text {
   .product--mobile-columns .product__media-item {
     width: calc(50% - 1.5rem - var(--grid-mobile-horizontal-spacing));
   }
+  
+  .product__title > * {
+    font: normal normal 600 22px/27px Montserrat;
+  }
+    
+  .product__text.product_caption {
+    padding-top: 10px;
+    font-size: 16px;
+    line-height: 19px;
+  }
+    
+  .product__text.shipping_info {
+    padding-top: 21px;
+  }
+    
+  .price_include_taxes {
+    padding-top: 23px;
+  }
+
+  .product__info-container .product-form,
+    .product__info-container .product__description {
+    padding-top: 34px;
+  }
 }
 
 @media screen and (min-width: 750px) {
@@ -559,6 +631,13 @@ a.product__text {
 
   .product__media-list .product__media-item {
     width: 100%;
+  }
+    .product--large:not(.product--no-media) .product__info-wrapper {
+    max-width: 50%;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -773,6 +852,23 @@ a.product__text {
   .product--thumbnail_slider .is-active .deferred-media {
     display: block;
     width: 100%;
+  }
+
+  
+  .product-form__submit {
+    font: normal normal 600 16px/19px Montserrat;
+  }
+
+  .product__info-container {
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0 3px 20px #00000029;
+    border: 1px solid #D5D5D5;
+    border-radius: 5px;
+    opacity: 1;
+    padding: 26px 12px 25px 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
