--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -18,6 +18,7 @@
   .multicolumn .page-width {
     padding-left: 0;
     padding-right: 0;
+    padding-top: 36px;
   }
 }
 
@@ -34,6 +35,7 @@
 .multicolumn-list__item:only-child {
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 .multicolumn .button {
@@ -130,6 +132,8 @@
 .background-none .multicolumn-card-spacing {
   padding: 0;
   margin: 0;
+  width: 57px;
+  height: 57px;
 }
 
 .multicolumn-card__info {
@@ -147,7 +151,7 @@
 }
 
 .background-none .multicolumn-card__image-wrapper + .multicolumn-card__info {
-  padding-top: 2.5rem;
+  padding-top: 0;
 }
 
 .background-none .slider .multicolumn-card__info {
@@ -177,12 +181,21 @@
   .multicolumn.background-none .slider.slider--mobile {
     margin-bottom: 0rem;
   }
+
+  .background-none .multicolumn-card__image-wrapper + .multicolumn-card__info {
+    padding-left: 25px;
+    font-weight: medium;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0;
+  }
 }
 
 @media screen and (min-width: 750px) {
   .background-none .multicolumn-card__image-wrapper {
     margin-left: 1.5rem;
-    margin-right: 1.5rem;
+    width: 57px;
+    height: 57px;
   }
 
   .background-none .multicolumn-list .multicolumn-card__info,
@@ -190,8 +203,10 @@
     .multicolumn-list:not(.slider)
     .center
     .multicolumn-card__info {
-    padding-left: 1.5rem;
+    padding-left: 20px;
     padding-right: 1.5rem;
+    letter-spacing: 0px;
+    font: normal normal normal 18px/22px Montserrat;
   }
 }
 
